--- a/Vis_Framework_2024W/index.html
+++ b/Vis_Framework_2024W/index.html
@@ -14,6 +14,7 @@
 
     <!-- include Vis1 script -->
     <script src="js/shader.js"></script>
+    <script src="js/mipShader.js"></script>
     <script src="js/testShader.js"></script>
     <script src="js/volume.js"></script>
     <script src="js/camera.js"></script>
