--- a/Vis_Framework_2024W/index.html
+++ b/Vis_Framework_2024W/index.html
@@ -39,6 +39,9 @@
     <!-- container for interactive transfer function -->
     <div id="tfContainer"></div>
 
+    <!-- histogram container-->
+    <div id="histogram"></div>
+
 </div>
 
 
