hist change almost done Todo: transition and correct display of data

--- a/Vis_Framework_2024W/index.html
+++ b/Vis_Framework_2024W/index.html
@@ -26,7 +26,7 @@
 <body onload="init()">
 
 <h1>Vis1 Exercise</h1>
-<h2>Your names here</h2>
+<h2>Grüner Niklas, Unterweger Konstantin</h2>
 
 <!-- data selector -->
 <p>Select your data here: <input id="upload" type="file"></p>
@@ -36,11 +36,12 @@
     <!-- volume rendering container -->
     <div id="viewContainer"></div>
 
+    <!-- histogram container-->
+
+    <div id="histogram"></div>
+
     <!-- container for interactive transfer function -->
     <div id="tfContainer"></div>
-
-    <!-- histogram container-->
-    <div id="histogram"></div>
 
 </div>
 
