--- a/Vis_Framework_2024W/index.html
+++ b/Vis_Framework_2024W/index.html
@@ -15,10 +15,11 @@
     <!-- include Vis1 script -->
     <script src="js/shader.js"></script>
     <script src="js/mipShader.js"></script>
+    <script src="js/firsHitShader.js"></script>
     <script src="js/testShader.js"></script>
     <script src="js/volume.js"></script>
     <script src="js/camera.js"></script>
-    <script src="js/vis1.js"></script>
+    <script src="js/vis2.js"></script>
 
 </head>
 
