color and isovalue can now be selected manually

--- a/Vis_Framework_2024W/index.html
+++ b/Vis_Framework_2024W/index.html
@@ -38,7 +38,9 @@
     <div id="viewContainer"></div>
 
     <!-- container for interactive transfer function -->
-    <div id="tfContainer"></div>
+    <div id="tfContainer">
+        <input type="color" id="surfaceColor" name="head" value="#e66465" />
+    </div>
 
 </div>
 
