--- a/Vis_Framework_2024W/index.html
+++ b/Vis_Framework_2024W/index.html
@@ -39,7 +39,8 @@
 
     <!-- container for interactive transfer function -->
     <div id="tfContainer">
-        <input type="color" id="surfaceColor" name="head" value="#e66465" />
+        <label for="surfaceColor">Choose surface color</label>
+        <input type="color" id="surfaceColor" name="head" value="#ffffff" />
     </div>
 
 </div>
