--- a/Vis_Framework_2024W/index.html
+++ b/Vis_Framework_2024W/index.html
@@ -39,36 +39,16 @@
 
     <!-- container for interactive transfer function -->
     <div id="tfContainer">
-        <label for="surfaceColor">Choose surface color</label>
-        <input type="color" id="surfaceColor" name="head" value="#ffffff" />
+
         <div id="save">
             <h3>max.5, click to delete</h3>
             <button id="saveButton">save here</button>
+            <button id="deleteButton">delete last</button>
             <div id="arrayStrContainer">
                 <div class="button-text-container">
-                    <button>X</button>
                     <span class="text"></span>
-                    <div class="colorDisplay" style="width: 20px; height: 20px; border: 1px solid #fff;"></div>
-                </div>
-                <div class="button-text-container">
-                    <button>X</button>
-                    <span class="text"></span>
-                    <div class="colorDisplay" style="width: 20px; height: 20px; border: 1px solid #fff;"></div>
-                </div>
-                <div class="button-text-container">
-                    <button>X</button>
-                    <span class="text"></span>
-                    <div class="colorDisplay" style="width: 20px; height: 20px; border: 1px solid #fff;"></div>
-                </div>
-                <div class="button-text-container">
-                    <button>X</button>
-                    <span class="text"></span>
-                    <div class="colorDisplay" style="width: 20px; height: 20px; border: 1px solid #fff;"></div>
-                </div>
-                <div class="button-text-container">
-                    <button>X</button>
-                    <span class="text"></span>
-                    <div class="colorDisplay" style="width: 20px; height: 20px; border: 1px solid #fff;"></div>
+                    <label for="surfaceColor">Choose surface color: </label>
+                    <input type="color" id="surfaceColor" name="head" value="#ffffff" />
                 </div>
             </div>
         </div>
