refactored shader class

--- a/Vis_Framework_2024W/index.html
+++ b/Vis_Framework_2024W/index.html
@@ -39,14 +39,12 @@
 
     <!-- container for interactive transfer function -->
     <div id="tfContainer">
-
         <div id="save">
-            <button id="saveButton">save here</button>
-            <button id="deleteButton">delete last</button>
+            <button id="saveButton">Save layer</button>
+            <button id="deleteButton">Delete layer</button>
             <div id="arrayStrContainer">
                 <div class="button-text-container">
-                    <span class="text"></span>
-                    <label for="surfaceColor">Choose surface color: </label>
+                    <label for="surfaceColor" style="margin-right: 30px">Choose surface color: </label>
                     <input type="color" id="surfaceColor" name="head" value="#ffffff" />
                 </div>
             </div>
